last generated page

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ disqus_shortname:   awasunyin
 #email:
 twitter:            awasunyin
 #facebook:           username
-github-url:         awasunyin
+github-url:         awasunyin/ramen-for-ethdenver
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
